<resources>
    <string name="default_web_client_id">831069572736-6tmbg3lrsv82pdk03jr61m0vc1828d1f.apps.googleusercontent.com</string>
    <string name="app_name">DATAGAS</string>
    <string name="title_activity_saisie1">Info Site</string>
    <string name="title_activity_saisie2">Saisie2</string>
    <string name="title_activity_releve">Releve</string>
    <string name="title_activity_apres_releve">Après Mesure</string>
    <string name="activity_data_transfert_001">PATIENTEZ   TRANSFERT DES DONNEES EN COURS ....</string>
    <string name="activity_dara_transfert_002">Retour</string>
    <string name="activity_dialog_alert_releve_001">Alertes</string>
    <string name="activity_dialog_alert_releve_002">Dégradation aérobie partielle (CH4/CO2 faible)   Transit d’air dans le massif   Vanne HS</string>
    <string name="activity_dialog_alert_releve_003">Réglage proposé</string>
    <string name="activity_dialog_alert_releve_004">Consigne CH4 (%)</string>
    <string name="activity_dialog_alert_releve_005">value 1</string>
    <string name="activity_dialog_alert_releve_006">Consigne ∆p (mbar)</string>
    <string name="activity_dialog_alert_releve_007">value 2</string>
    <string name="activity_dialog_alert_releve_008">Consigne v (m/s)</string>
    <string name="activity_dialog_alert_releve_009">value 3</string>
    <string name="activity_dialog_alert_releve_010">Après réglage</string>
    <string name="activity_dialog_alert_releve_11">Retour</string>
    <string name="activity_erreur_001">Erreur</string>
    <string name="activity_erreur_002">Erreur a afficher</string>
    <string name="activity_erreur_003">Detail</string>
    <string name="activity_erreur_005">OK</string>
    <string name="activity_google_sign_001">Se connecter avec Google</string>
    <string name="activity_google_sign_002">Continuer</string>
    <string name="content_apres_releve_001">Site</string>
    <string name="content_apres_releve_002">Niveau 1</string>
    <string name="content_apres_releve_003">Niveau 2</string>
    <string name="content_apres_releve_004">Libellé</string>
    <string name="content_apres_releve_005">Avant réglage</string>
    <string name="content_apres_releve_006">Après réglage</string>
    <string name="content_apres_releve_007">Vanne</string>
    <string name="content_apres_releve_008">Ouverture de la vanne</string>
    <string name="content_apres_releve_009">Vitesse</string>
    <string name="content_apres_releve_010">Dépression</string>
    <string name="content_apres_releve_011">mbar</string>
    <string name="content_apres_releve_11">Commentaire</string>
    <string name="content_apres_releve_12">Annuler</string>
    <string name="content_apres_releve_13">VALIDER</string>
    <string name="content_releve_001">Site</string>
    <string name="content_releve_001_002">Niveau 1</string>
    <string name="content_releve_003">Niveau 2</string>
    <string name="content_releve_004">Libellé</string>
    <string name="content_releve_005">Dernier relevé</string>
    <string name="content_releve_006">Relevé du jour</string>
    <string name="content_releve_007">Vanne</string>
    <string name="content_releve_008">Ouverture de la vanne</string>
    <string name="content_releve_009">Vitesse</string>
    <string name="content_releve_010">Dépression</string>
    <string name="content_releve_011">mbar</string>
    <string name="content_releve_012">CH4</string>
    <string name="content_releve_013">CO2</string>
    <string name="content_releve_014">H2S</string>
    <string name="content_releve_015">ppm</string>
    <string name="content_releve_016">CO</string>
    <string name="content_releve_017">ppm</string>
    <string name="content_releve_018">H2</string>
    <string name="content_releve_0117">Temperature</string>
    <string name="content_releve_019">Débit Calculé</string>
    <string name="content_releve_020">m3/h</string>
    <string name="content_releve_021">Commentaire</string>
    <string name="content_releve_022">Relevé après réglage</string>
    <string name="content_releve_023">Annuler</string>
    <string name="content_releve_024">VALIDER</string>
    <string name="content_saisie1_001">Responsable du fichier de relève</string>
    <string name="content_saisie1_002">Site</string>
    <string name="content_saisie1_003">Date du relevé</string>
    <string name="content_saisie1_004">Pression</string>
    <string name="content_saisie1_005">hPa</string>
    <string name="content_saisie1_006">Température</string>
    <string name="content_saisie1_007">Source Openweathermap</string>
    <string name="content_saisie1_008">Continuer</string>
    <string name="mnuadduser_001">Enregistrer</string>
    <string name="mnulogin_001">Charger le référentiel</string>
    <string name="mnulogin_002">Se déconnecter</string>
    <string name="mnulogin_003">Quitter</string>
    <string name="mnureleve_001">Réglage après relève</string>
    <string name="mnureleve_002">Supprimer</string>
    <string name="bdu_date_001"> jour(s)</string>
    <string name="bdu_date_002"> heure(s)</string>
    <string name="bdu_date_003"> minute(s)</string>
    <string name="bdu_date_004">secondes(s)</string>
    <string name="check_autorisation">Validation des autorisations ...</string>
    <string name="check_autorisation_002">Ce terminal est désactivé. Contacter votre administrateur.</string>
    <string name="check_autorisation_003">Ce terminal n\'est pas déclaré. Contacter votre administrateur.</string>
    <string name="check_autorisation_004">Une erreur est survenue.</string>
    <string name="check_autorisation_005">Ce terminal n\'est pas associé à l\'utilisateur</string>
    <string name="check_autorisation_006">. Contacter votre administrateur.</string>
    <string name="check_autorisation_007">Cette application n\'est pas autorisée pour l\'utilisateur</string>
    <string name="check_autorisation_008">L\'utilisateur</string>
    <string name="check_autorisation_009">à été désactivé. Contacter votre administrateur.</string>
    <string name="check_autorisation_010">L\'utilisateur</string>
    <string name="check_autorisation_011">n\'est pas déclaré. Contacter votre administrateur.</string>
    <string name="chech_autorisation_012">Une erreur est survenue.</string>
    <string name="erreur_001">Retour</string>
    <string name="erreur_002">Detail</string>
    <string name="global_001">Alerte</string>
    <string name="global_002">Patientez ...</string>
    <string name="apres_releve_001">Aucune information a afficher!</string>
    <string name="apres_releve_002">Erreur mise à jour Releve</string>
    <string name="apres_releve_003">Confirmation</string>
    <string name="apres_releve_004">Des valeurs ont été modifiées. Quitter sans enregistrer ?</string>
    <string name="apres_releve_005">Oui</string>
    <string name="apres_releve_006">Saisie obligatoire</string>
    <string name="apres_releve_007">La valeur doit être comprise entre 0 et 100 %</string>
    <string name="apres_releve_008">Erreur de format</string>
    <string name="apres_releve_009">La valeur doit être comprise entre 0 et 40 m/s</string>
    <string name="apres_releve_010">Saisie obligatoire</string>
    <string name="apres_releve_011">La valeur doit être comprise entre -300 et 300 Mbar</string>
    <string name="apres_releve_012">Ouverture vanne: valeur entre 0 et 100%</string>
    <string name="apres_releve_013">Vitesse: valeur comprise en 0 et 10 m/s</string>
    <string name="apres_releve_014">Dépression: valeur comprise entre -300 et 300 Mbar</string>
    <string name="choix_casier_collecteur_001">CASIERS</string>
    <string name="choix_casier_collecteur_002">COLLECTEURS</string>
    <string name="choix_puit_drain_001">PUITS</string>
    <string name="choix_puit_drain_002">DRAINS</string>
    <string name="data_transfert_001">Ecriture des données ...</string>
    <string name="data_transfert_002">Une erreur est survenue.</string>
    <string name="data_transfert_004">Mise à jour des données terminée</string>
    <string name="dialogue_alerte_releve_001">calcul impossible CH4 cible = 0</string>
    <string name="dialogue_alerte_releve_002">calcul impossible CH4 cible = 0</string>
    <string name="dialogue_alerte_releve_003">Dégradation aerobie partielle (CH4/CO2 faible)</string>
    <string name="dialogue_alerte_releve_004">Transit d’air dans le massif</string>
    <string name="dialogue_alerte_releve_005">Vanne HS</string>
    <string name="google_login_001">Se connecter avec Google</string>
    <string name="google_login_002">Se déconnecter</string>
    <string name="google_login_003"><![CDATA[Votre terminal est incompatible. <br>]]></string>
    <string name="google_login_004">Cette application ne fonctionne que sur tablette 7 pouces minimum.</string>
    <string name="google_login_005">Confirmation</string>
    <string name="google_login_006">Quitter l\'application ?</string>
    <string name="google_login_007">Oui</string>
    <string name="google_login_008">Login:Fermeture de application</string>
    <string name="google_login_009">Non</string>
    <string name="google_login_010">Patientez...</string>
    <string name="google_login_011">Pas de réseau disponible. Réessayer</string>
    <string name="google_login_012">recherche en cours...</string>
    <string name="google_login_013">Pas de réseau disponible. Réessayer</string>
    <string name="google_login_014">Cette application nécessite Google Play Services.</string>
    <string name="google_login_015">Installer Google Play Services sur votre terminal et relancer l\'application</string>
    <string name="google_login_016"><![CDATA[Vous n\'etes pas autorisé à utiliser cette application. <br><br> Un compte veolia est requis]]></string>
    <string name="google_login_017">Erreur de connexion</string>
    <string name="google_login_018">Chargement du référentiel ...</string>
    <string name="google_login_019">Une erreur est survenue.</string>
    <string name="google_login_020">Aucun site déclaré pour</string>
    <string name="google_login_021">Sélectionner un site</string>
    <string name="google_login_022"><![CDATA[<b>Reprendre la campagne</b>]]></string>
    <string name="google_login_023"><![CDATA[<b>Cloturer la campagne du]]></string>
    <string name="google_login_024"><![CDATA[<b>Cloturer la campagne du]]></string>
    <string name="google_login_025"><![CDATA[& Transférer les données]]></string>
    <string name="google_login_026"><![CDATA[<b> Annuler </br]]></string>
    <string name="google_login_027">Une campage de relève est en cours pour le :</string>
    <string name="google_login_028">Une erreur est survenue</string>
    <string name="google_login_029">Mise à jour table Releve : procedure: cloture - activity : GoogleLogin</string>
    <string name="google_login_030">Chargement référentiels du site...</string>
    <string name="google_login_031">Aucun site sélectionné</string>
    <string name="google_login_032">Une erreur est survenue.</string>
    <string name="permission_001">Aucune connexion disponible.</string>
    <string name="permission_002">Cette application nécessite Google Play Services.</string>
    <string name="permission_003">Installer Google Play Services sur votre terminal et relancer l\'application</string>
    <string name="releve_001">Aucune information a afficher!</string>
    <string name="releve_002">Supprimer</string>
    <string name="releve_003">Attention!</string>
    <string name="releve_005">Confirmez vous la suppression de la relève ?</string>
    <string name="releve_006">Suppression impossible</string>
    <string name="releve_007">Saisie obligatoire</string>
    <string name="releve_008">La valeur doit être comprise entre 0 et 100 %</string>
    <string name="releve_009">Erreur de saisie</string>
    <string name="releve_010">Saisie obligatoire</string>
    <string name="releve_011">La valeur doit être comprise entre 0 et 40 m/s</string>
    <string name="releve_004">Erreur de saisie</string>
</resources>