<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_margin="2dp"
    android:background="#fffef3f6"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Src.Saisie1">


    <LinearLayout
        android:id="@+id/laytout0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <!-- saisie du site, de la date et dela pression -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="DATAGAS"
                android:textSize="30dp"
                android:textColor="#FE0000"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logoveolia1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="Login name"
                android:textSize="25dp" />



            <TextView
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="Login email"
                android:textSize="15dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/content_saisie1_001"
                    android:textSize="25dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/saisie1_proprietaire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:textStyle="bold|italic"
                    android:text="demo"
                    android:gravity="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />


            <!--Affichage du SITE-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/content_saisie1_002"
                    android:textSize="25dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/saisie1_site"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:gravity="center" />

            </LinearLayout>

            <!--Affichage du Proprietaire-->



            <!--saisie de la date du relevé-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/content_saisie1_003"
                    android:textSize="25dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/saisie1_dateReleve"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:gravity="center"
                    android:hint="01/01/2017"
                    android:textStyle="bold"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/saisie1_timeReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="01/01/2017"
                    android:textStyle="bold"
                    android:textSize="25sp" />


            </LinearLayout>
                <!--saisie de la pression atmospherique-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/content_saisie1_004"
                    android:textSize="25dp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/saisie1_pression"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number|numberSigned"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="@string/content_saisie1_005"
                    android:textSize="25sp" />

            </LinearLayout>
            <!--saisie de la temperature-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="left"
                    android:padding="5dp"
                    android:text="@string/content_saisie1_006"
                    android:textSize="25dp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/saisie1_temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number|numberSigned"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:text="°C"
                    android:textSize="25sp" />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="5dp"
                android:layout_marginLeft="30dp"
                android:text="@string/content_saisie1_007"
                android:textSize="10sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <Button
            android:text="@string/content_saisie1_008"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:id="@+id/saisie1_continuer" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_imei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="Imei: "
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txtVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="(c) Recyclage et Valorisation - v1.0 Fevrier 2017"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
